--- a/WeQ/package.json
+++ b/WeQ/package.json
@@ -4,29 +4,41 @@
   "version": "0.0.0",
   "main": "dist/main/main.js",
   "scripts": {
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "electron-tsc": "tsc electron/main.ts electron/preload.ts --outDir dist/main",
     "electron:build": "pnpm build && pnpm electron-tsc",
     "electron-dev": "cross-env ELECTRON_DISABLE_SECURITY_WARNINGS=true MODE='devlopment' electron .",
-    "electron:compile":"pnpm electron-tsc",
+    "electron:compile": "pnpm electron-tsc",
     "electron:dev": "pnpm electron-tsc && concurrently \"pnpm dev\" \"pnpm electron-dev\"",
     "app:build": "pnpm electron:build && pnpm electron-builder"
   },
   "dependencies": {
     "@types/node": "^18.8.2",
+    "axios": "^0.27.2",
+    "element-plus": "2.2.17",
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "@typescript-eslint/eslint-plugin": "5.39.0",
+    "@typescript-eslint/parser": "5.39.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^17.4.11",
     "electron-builder": "^22.14.13",
     "electron-devtools-installer": "^3.2.0",
+    "eslint": "8.24.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "node-sass": "7.0.3",
+    "sass-loader": "13.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vue-router": "4.1.5",
     "vue-tsc": "^0.40.4"
   },
   "build": {
