--- a/WeQ/tsconfig.json
+++ b/WeQ/tsconfig.json
@@ -34,5 +34,10 @@
     "src/**/*.vue"
   ],
   "compileOnSave": true,
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "paths": {
+    "@/*": [
+      "src/*"
+    ]
+  } 
 }
