--- a/WeQ/package.json
+++ b/WeQ/package.json
@@ -19,33 +19,32 @@
     "@types/node": "^18.8.2",
     "axios": "^0.27.2",
     "element-plus": "2.2.17",
-    "vue": "^3.2.37"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "vue": "^3.2.37",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@element-plus/icons": "^0.0.11",
-    
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "concurrently": "^7.4.0",
+    "cross-env": "^7.0.3",
+    "electron-builder": "^22.14.13",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-packager": "^16.0.0",
     "eslint": "8.24.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-vue": "^9.6.0",
-
-    "@vitejs/plugin-vue": "^3.1.0",
-    "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
-
-    "electron": "^17.4.11",
-    "electron-builder": "^22.14.13",
-    "electron-devtools-installer": "^3.2.0",
-
     "node-sass": "7.0.3",
     "sass-loader": "13.1.0",
-
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-
     "vue-router": "4.1.5",
-    "vue-tsc": "^0.40.4"
+    "vue-tsc": "^0.40.4",
+    "wait-on": "^6.0.1"
   },
   "build": {
     "appId": "com.antelcat.weq",
