--- a/WeQ/package.json
+++ b/WeQ/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@types/node": "^18.8.2",
     "axios": "^0.27.2",
+    "electron": "^21.1.0",
     "element-plus": "2.2.17",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
+    "mirai-ts": "^2.4.1",
     "vue": "^3.2.37",
     "webpack": "^5.74.0"
   },
