Find solution to get exit of java
using Promise and interval

--- a/mirai/config.json
+++ b/mirai/config.json
@@ -36,6 +36,12 @@
       "version": "2.6.2",
       "type": "plugins",
       "versionLocked": false
+    },
+    "org.bouncycastle:bcprov-jdk15on": {
+      "channel": "stable",
+      "version": "1.64",
+      "type": "libs",
+      "versionLocked": false
     }
   },
   "archiveSuffix": [
