--- a/WeQ/package.json
+++ b/WeQ/package.json
@@ -2,7 +2,7 @@
   "name": "weq",
   "private": true,
   "version": "0.0.0",
-  "main": "dist/main/main.js",
+  "main": "dist/main/electron/main.js",
   "scripts": {
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "dev": "vite",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/node": "^18.8.2",
+    "@types/ws": "^8.5.3",
     "axios": "^0.27.2",
     "electron": "^21.1.0",
     "element-plus": "2.2.17",
@@ -25,7 +26,8 @@
     "eslint-plugin-promise": "^6.0.1",
     "mirai-ts": "^2.4.1",
     "vue": "^3.2.37",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
     "@element-plus/icons": "^0.0.11",
